# SuZhouQuaChk

CMakeQuaChkSys/: CMakeLists.txt
CMakeQuaChkSys/MDomQuaChk/: CMakeLists.txt  MDomQuaChk.cpp  stdafx.cpp  stdafx.h
CMakeQuaChkSys/MDomQuaChkImgMch/: CMakeLists.txt  MDomQuaChkImgMch.cpp  stdafx.cpp  stdafx.h
CMakeQuaChkSys/MDomQuaChkSys/: CMakeLists.txt  GradientProgressCtrl.h  MDomQuaChkSys.aps  MDomQuaChkSys.cpp  MDomQuaChkSys.h  MDomQuaChkSys.rc  MDomQuaChkSys.vcxproj  MDomQuaChkSys.vcxproj.filters  MDomQuaChkSysDoc.cpp  MDomQuaChkSysDoc.h  MDomQuaChkSysView.cpp  MDomQuaChkSysView.h  MNewPrjDlg.cpp  MNewPrjDlg.h  MainFrm.cpp  MainFrm.h  MultiThreadFuns.cpp  MultiThreadFuns.h  MyDockablePane.cpp  MyDockablePane.h  MyFunctions.cpp  MyFunctions.h  MyImgViewWnd.cpp  MyImgViewWnd.h  MyListCtrl.cpp  MyListCtrl.h  MyMFCPropertyGridCtrl.cpp  MyMFCPropertyGridCtrl.h  MyMFCRibbonBar.cpp  MyMFCTabCtrl.cpp  MyMFCTabCtrl.h  MyMatchPointChartDlg.cpp  MyMatchPointChartDlg.h  MyMatchPtChartWnd.cpp  MyMatchPtChartWnd.h  MySourceDataWnd.cpp  MySourceDataWnd.h  MyTreeCtrl.cpp  MyTreeCtrl.h  MyViewerRender.cpp  (+14 more)
CMakeQuaChkSys/MDomQuaChkSys/Debug/x64/: MDomQuaChkSys.res  vc120.idb
CMakeQuaChkSys/MDomQuaChkSys/Debug/x64/MDomQuaChkSys.tlog/: CL.read.1.tlog  CL.write.1.tlog  MDomQuaChkSys.lastbuildstate  cl.command.1.tlog  rc.command.1.tlog  rc.write.1.tlog
CMakeQuaChkSys/MDomQuaChkSys/Release/x64/: MDomQuaChkSys.lastbuildstate  MDomQuaChkSys.res  MDomQuaChkSys.write.1.tlog  cl.command.1.tlog  cl.read.1.tlog  cl.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
CMakeQuaChkSys/MDomQuaChkSys/Release/x64/MDomQuaChkSys.tlog/: CL.read.1.tlog  CL.write.1.tlog  MDomQuaChkSys.lastbuildstate  MDomQuaChkSys.write.1u.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog
CMakeQuaChkSys/MDomQuaChkSys/res/: MDomQuaChkSys.rc2  ribbon.mfcribbon-ms
CMakeQuaChkSys/MDomSupQuaChk/: CMakeLists.txt  Include.h  LogFile.cpp  LogFile.h  MDomSupQuaChk.cpp
CMakeQuaChkSys/MImage/: CMakeLists.txt  MImage.cpp  stdafx.cpp  stdafx.h
CMakeQuaChkSys/MSlic/: CMakeLists.txt  slic.cpp  slic.h
CMakeQuaChkSys/include/: sswPDFLib.h  sswPDFLib1.h
CMakeQuaChkSys/include/MDomQuaChk/: MDomQuaChk.h
CMakeQuaChkSys/include/MImage/: MDataTypeBase.h  MImage.h
DomQuaChk_MainInterface/: DomQuaChk.sln
DomQuaChk_MainInterface/DomQuaChk/: DomQuaChk.Designer.cs  DomQuaChk.cs  DomQuaChk.csproj  DomQuaChk.resx  Program.cs  TEDSAPP.cs
DomQuaChk_MainInterface/DomQuaChk/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  licenses.licx
