#创建的工程名
PROJECT (QuaChkSys)
#添加CMAKE的版本信息
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#增加各个项目的文件夹，每个文件对应一个项目
ADD_SUBDIRECTORY  (MImage)

ADD_SUBDIRECTORY  (MDomQuaChkImgMch)

ADD_SUBDIRECTORY  (MDomQuaChk)

ADD_SUBDIRECTORY  (MDomQuaChkSys)

ADD_SUBDIRECTORY  (MSlic)

FILE(COPY ${PROJECT_SOURCE_DIR}/bin DESTINATION ${PROJECT_BINARY_DIR}) #将所需的配置文件复制到编译的文件夹
