CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/include)

LINK_DIRECTORIES (${PROJECT_BINARY_DIR}/bin)

ADD_DEFINITIONS("-DMDOMQUACHK_EXPORT")
ADD_DEFINITIONS("-D_AFXDLL")
ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS")

FILE(GLOB_RECURSE HDRS_FILES "${PROJECT_SOURCE_DIR}/include/MDomQuaChk/*.h" *.hpp *.h *.hpp)
FILE(GLOB_RECURSE SRCS_FILES "${PROJECT_SOURCE_DIR}/include/xml/*.cpp" *.cpp *.c *.cc *.cxx)
ADD_LIBRARY(MDomQuaChk SHARED ${SRCS_FILES} ${HDRS_FILES})

#SET(SRC_LIB MDomQuaChk.cpp stdafx.cpp)
#ADD_LIBRARY(QuaChk SHARED ${SRC_LIB})

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)