CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/include)

LINK_DIRECTORIES (${PROJECT_BINARY_DIR}/bin)

ADD_DEFINITIONS("-D_AFXDLL")

FILE(GLOB_RECURSE HDRS_FILES *.hpp *.h *.hpp)
FILE(GLOB_RECURSE SRCS_FILES *.cpp *.c *.cc *.cxx)
ADD_EXECUTABLE(MDomQuaChkImgMch ${SRCS_FILES} ${HDRS_FILES})

#SET(SRC_LIB MDomQuaChkImgMch.cpp stdafx.cpp)
#ADD_EXECUTABLE(ImgMch ${SRC_LIB})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)