CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/include)

LINK_DIRECTORIES (${PROJECT_BINARY_DIR}/bin)

ADD_DEFINITIONS("-D_AFXDLL")
ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS")
SET(CMAKE_MFC_FLAG 2)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /GL") 
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /GL") 


FILE(GLOB_RECURSE HDRS_FILES *.hpp *.h *.hpp)
FILE(GLOB_RECURSE SRCS_FILES "${PROJECT_SOURCE_DIR}/include/xml/*.cpp" *.cpp *.c *.cc *.cxx *.rc)
ADD_EXECUTABLE(MDomQuaChkSys WIN32 ${SRCS_FILES} ${HDRS_FILES})

#SET(SRC_LIB MDomQuaChk.cpp stdafx.cpp)
#ADD_LIBRARY(QuaChk SHARED ${SRC_LIB})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)