CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/include/gdal201)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/include/MImage)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/MSlic)

LINK_DIRECTORIES (${PROJECT_BINARY_DIR}/bin)

ADD_DEFINITIONS("-D_AFXDLL")
ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS")

FILE(GLOB_RECURSE HDRS_FILES "${PROJECT_SOURCE_DIR}/include/gdal201/*.h" *.hpp *.h *.hpp)
FILE(GLOB_RECURSE SRCS_FILES *.cpp *.c *.cc *.cxx)

ADD_EXECUTABLE(MDomSupQuaChk ${SRCS_FILES} ${HDRS_FILES})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)