CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/include)

#set(CMAKE_BUILD_TYPE Debug CACHE STRING "set build type to debug")  
#if(CMAKE_BUILD_TYPE STREQUAL Release)
#LINK_DIRECTORIES (${PROJECT_SOURCE_DIR}/lib/release)
#else()
#LINK_DIRECTORIES (${PROJECT_SOURCE_DIR}/lib/debug)
#endif()

LINK_DIRECTORIES (${PROJECT_BINARY_DIR}/bin)

ADD_DEFINITIONS("-DMIMAGE_EXPORTS")

FILE(GLOB_RECURSE HDRS_FILES "${PROJECT_SOURCE_DIR}/include/MImage/*.h" *.hpp *.h *.hpp)
FILE(GLOB_RECURSE SRCS_FILES "${PROJECT_SOURCE_DIR}/include/xml/*.cpp" *.cpp *.c *.cc *.cxx)
ADD_LIBRARY(MImage SHARED ${SRCS_FILES} ${HDRS_FILES})

#SET(SRC_LIB MImage.cpp stdafx.cpp)
#ADD_LIBRARY(ImgPro SHARED ${SRC_LIB})

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)