CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_DEFINITIONS("-D_AFXDLL")
ADD_DEFINITIONS("-DTKSLICCLASSINFOR")
ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS")

FILE(GLOB_RECURSE HDRS_FILES *.hpp *.h *.hpp)
FILE(GLOB_RECURSE SRCS_FILES *.cpp *.c *.cc *.cxx)

ADD_LIBRARY(CSlic SHARED ${SRCS_FILES} ${HDRS_FILES})

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
